[package]
name = "tauri-tools-web"
version = "0.0.1"
description = "A Tauri App"
authors = ["zy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.68.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0" }
tauri = { version = "1.2.4", features = ["api-all"] }
headless_chrome = {git = "https:///github.com/atroche/rust-headless-chrome", features = ["fetch"],default-features = false}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
